Meu segundo commit

--- a/home.html
+++ b/home.html
@@ -85,24 +85,43 @@
                 
                 <!-- Conteúdo -->
                 <div class="welcome-content">
-                    <h1 class="welcome-title">Bem-vindo Bode!</h1>
+                    <h1 class="welcome-title">Bem-vindo Bode! 🐝</h1>
                     <p class="welcome-text">
                         Pellentesque convallis accumsan suscipit aliquet eu diam quis nulla turpis. 
                         In mus massa lectus laoreet sed semper bibendum id. laculis purus malesuada 
                         porttitor aliquam pulvinar.
                     </p>
+                    <div class="welcome-icons">
+                        <span style="font-size: 2rem; margin-right: 1rem; animation: float 3s ease-in-out infinite;">🐝</span>
+                        <span style="font-size: 1.5rem; margin-right: 1rem; animation: float 3.5s ease-in-out infinite; animation-delay: 0.5s;">🍯</span>
+                        <span style="font-size: 2rem; animation: float 4s ease-in-out infinite; animation-delay: 1s;">🐝</span>
+                    </div>
                 </div>
             </div>
 
             <!-- Carrossel de Artigos -->
             <div class="carousel-section">
+                <div class="carousel-header">
+                    <h2 class="carousel-title">Artigos Recentes 🐝</h2>
+                    <button class="refresh-btn">
+                        <i class="fas fa-sync-alt"></i>
+                        Atualizar
+                    </button>
+                </div>
                 <div class="carousel-container">
                     <div class="carousel-wrapper">
                         <div class="carousel-track">
                             <!-- Card 1 -->
                             <div class="article-card">
                                 <div class="article-image">
-                                    <!-- Espaço para foto -->
+                                    <div class="hive-icon-container">
+                                        <svg width="100" height="100" viewBox="0 0 100 100" style="color: #FFC61A;">
+                                            <path d="M50 10 L65 20 L65 40 L50 50 L35 40 L35 20 Z" fill="currentColor" opacity="0.8"/>
+                                            <path d="M50 50 L65 60 L65 80 L50 90 L35 80 L35 60 Z" fill="currentColor" opacity="0.8"/>
+                                            <path d="M15 50 L30 60 L30 80 L15 90 L0 80 L0 60 Z" fill="currentColor" opacity="0.6"/>
+                                            <path d="M85 50 L100 60 L100 80 L85 90 L70 80 L70 60 Z" fill="currentColor" opacity="0.6"/>
+                                        </svg>
+                                    </div>
                                 </div>
                                 <div class="article-content">
                                     <span class="article-category">Category</span>
@@ -125,7 +144,10 @@
                             <!-- Card 2 -->
                             <div class="article-card">
                                 <div class="article-image">
-                                    <!-- Espaço para foto -->
+                                    <div class="bee-icon-container">
+                                        <i class="fas fa-bug" style="font-size: 4rem; color: #FFC61A;"></i>
+                                        <i class="fas fa-bug" style="font-size: 2rem; color: #FFD84D; position: absolute; top: 15px; right: 15px;"></i>
+                                    </div>
                                 </div>
                                 <div class="article-content">
                                     <span class="article-category">Category</span>
@@ -148,7 +170,14 @@
                             <!-- Card 3 -->
                             <div class="article-card">
                                 <div class="article-image">
-                                    <!-- Espaço para foto -->
+                                    <div class="hive-icon-container">
+                                        <svg width="100" height="100" viewBox="0 0 100 100" style="color: #FFD84D;">
+                                            <path d="M50 10 L65 20 L65 40 L50 50 L35 40 L35 20 Z" fill="currentColor" opacity="0.8"/>
+                                            <path d="M50 50 L65 60 L65 80 L50 90 L35 80 L35 60 Z" fill="currentColor" opacity="0.8"/>
+                                            <path d="M15 50 L30 60 L30 80 L15 90 L0 80 L0 60 Z" fill="currentColor" opacity="0.6"/>
+                                            <path d="M85 50 L100 60 L100 80 L85 90 L70 80 L70 60 Z" fill="currentColor" opacity="0.6"/>
+                                        </svg>
+                                    </div>
                                 </div>
                                 <div class="article-content">
                                     <span class="article-category">Category</span>
@@ -171,7 +200,10 @@
                             <!-- Card 4 -->
                             <div class="article-card">
                                 <div class="article-image">
-                                    <!-- Espaço para foto -->
+                                    <div class="bee-icon-container">
+                                        <i class="fas fa-bug" style="font-size: 3.5rem; color: #FFC61A;"></i>
+                                        <span style="font-size: 2rem; position: absolute; bottom: 10px; right: 10px;">🐝</span>
+                                    </div>
                                 </div>
                                 <div class="article-content">
                                     <span class="article-category">Category</span>
@@ -197,11 +229,11 @@
 
             <!-- Últimos Lembretes -->
             <div class="reminders-section">
-                <h2 class="reminders-title">Ultimos lembretes</h2>
+                <h2 class="reminders-title">Ultimos lembretes 🐝</h2>
                 <div class="reminders-container">
                     <!-- Coluna 1 -->
                     <div class="reminders-column">
-                        <div class="reminders-date">25 May</div>
+                        <div class="reminders-date">25 May 🍯</div>
                         <div class="reminders-list">
                             <div class="reminder-item">
                                 <div class="reminder-line"></div>
@@ -230,7 +262,7 @@
 
                     <!-- Coluna 2 -->
                     <div class="reminders-column">
-                        <div class="reminders-date">30 Jul</div>
+                        <div class="reminders-date">30 Jul 🐝</div>
                         <div class="reminders-list">
                             <div class="reminder-item">
                                 <div class="reminder-line"></div>
@@ -259,7 +291,7 @@
 
                     <!-- Coluna 3 -->
                     <div class="reminders-column">
-                        <div class="reminders-date">22 Sep</div>
+                        <div class="reminders-date">22 Sep 🍯</div>
                         <div class="reminders-list">
                             <div class="reminder-item">
                                 <div class="reminder-line"></div>
